<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">sQueue</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Queue</string>
    <string name="user_profile">User profile</string>
    <string name="user_name">Login name</string>
    <string name="user_name_summary">Login name for your messages</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary">Enable vibrate for notification</string>
    <string name="pref_logo">Picture</string>
    <string name="selectlogo">Select your profile picture</string>
    <string name="emptyMessageslist">Ops :( there is no messages.</string>
    <string name="emptypromotionslist">Queue is empty, check later</string>
    <string name="promote">Add promotion</string>
    <string name="title">Title</string>
    <string name="text">Content</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_image">Add image</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="promotionImage">Image</string>
    <string name="empty_conversation">No conversations.</string>
    <string name="me">Me</string>
    <string name="all">All</string>
    <string name="ask_for_image">Request an image</string>
    <string name="ask_for_video">Request a video</string>
    <string name="ask_for_image_declined">Sorry, your request for image has been declined</string>
    <string name="request_image_alert_title">Request an image</string>
    <string name="request_image_alert_text">requested an image from what you see around to know what\'s going on.</string>
    <string name="ask_for_video_declined">Sorry, your request for video has been declined</string>
    <string name="request_video_alert_title">Request a video</string>
    <string name="request_video_alert_text">requested a video from what you see around to know what\'s going on.</string>
 </resources>