<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

       <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:footerDividersEnabled="true"/>
     
	 <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="6dip"
        android:layout_marginBottom="6dip"
        android:layout_weight="1">

        <TextView android:id="@+android:id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/pref_logo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal" />

        <TextView android:id="@+android:id/summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@android:id/title"
            android:layout_alignLeft="@android:id/title"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:maxLines="2"
            android:text="@string/selectlogo"
             />

        <ImageView android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:maxWidth="150dp"
            android:maxHeight="100dp"
            android:src="@android:drawable/ic_menu_gallery"
            android:layout_alignParentRight="true"
            android:onClick="pickLogo"
            android:contentDescription="@string/add_image" />
    </RelativeLayout>
</LinearLayout>
