<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="22dp"
                android:ems="10"
                android:gravity="top"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:lines="5"
                android:linksClickable="false"
                android:paddingLeft="5dp" />

            <ImageButton
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/add_image"
                android:maxHeight="@dimen/large_image_height"
                android:maxWidth="@dimen/large_image_with"
                android:onClick="pickImage"
                android:src="@android:drawable/ic_menu_gallery" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/body"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/entrySaveCancel"
            style="@android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@android:string/cancel"
            android:textColor="@android:color/white"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/entrySave"
            style="@android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/save"
            android:layout_margin="10dp"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>